examples/test/testpolicy15856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15856
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key14: value38
      key12: value13
      key1: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value18
          key31: value47
          key48: value47
